play ding on site load to test sound

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 
 /* End Drag and Drop Funcs */
 
+	var a1 = new Audio("ding.mp3");
+		a1.play();
+
 $().ready(function(){
 var meetingTimer = function(timeDelaySet,audioFileName){
 	console.log(timeDelaySet+"< how long"+audioFileName+"< audioFile")
