--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 $().ready(function(){
 var meetingTimer = function(timeDelaySet,audioFileName){
 	console.log(timeDelaySet+"< how long"+audioFileName+"< audioFile")
-
+	document.getElementById('ding').play();
 
 	// var a1 = new Audio(audioFileName);
 	// var a2 = new Audio('dingdingding.mp3');
