--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ var meetingTimer = function(timeDelaySet,audioFileName){
 		setInterval(function() {
 			countDownNumber--
 			$("#minutes1").html(countDownNumber+" Seconds remaining");
-			if(countDownNumber == 0){
+			if(countDownNumber <= 1){
 				$("#minutes1").html("1 Minute Timer");
 				document.getElementById("minutes1").disabled = false; 
 				clearInterval();
@@ -104,7 +104,7 @@ var meetingTimer = function(timeDelaySet,audioFileName){
 		setInterval(function() {
 			countDownNumber--
 			$("#minutes2").html(countDownNumber+" Seconds remaining");
-			if(countDownNumber == 0){
+			if(countDownNumber <= 1){
 				$("#minutes1").html("2 Minute Timer");
 				document.getElementById("minutes1").disabled = false; 
 				clearInterval();
@@ -121,7 +121,7 @@ var meetingTimer = function(timeDelaySet,audioFileName){
 		setInterval(function() {
 			countDownNumber--
 			$("#seconds90").html(countDownNumber+" Seconds remaining");
-			if(countDownNumber == 0){
+			if(countDownNumber <= 1){
 				$("#minutes1").html("1 1/2 Minute Timer");
 				document.getElementById("seconds90").disabled = false; 
 				clearInterval();
