--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ var meetingTimer = function(timeDelaySet,audioFileName){
 		if(audioFileName=="ding"){
 			document.getElementById('ding').play();
 		}
-		if(audioFileName=="dingding"){
+		if(audioFileName=="dingdingding"){
 			document.getElementById('dingding').play();
 		}
 	}, timeDelaySet);
