--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <button id="minutes1">1 minute timer</button>
             <button id="seconds90">1 1/2 minute timer</button>
             <button id="minutes2">2 minute timer</button>
-            <div class="eight columns"> </div>
+            <div class="eight columns">Meeting Timer with 20 seconds left ding sound.</div>
         </div>
 	</div>
 	<audio id="ding" src="ding.wav" preload="auto"></audio>
@@ -54,18 +54,18 @@
 
 $().ready(function(){
 var meetingTimer = function(timeDelaySet,audioFileName){
-	console.log(timeDelaySet+"< how long"+audioFileName+"< audioFile")
 	document.getElementById('ding').play();
+	document.getElementById('dingding').play();
 
 	// var a1 = new Audio(audioFileName);
-	// var a2 = new Audio('dingdingding.mp3');
+	// var a2 = new Audio('dingding.mp3');
 
 	setTimeout(function() {
 		// a1.play();
 		if(audioFileName=="ding"){
 			document.getElementById('ding').play();
 		}
-		if(audioFileName=="dingdingding"){
+		if(audioFileName=="dingding"){
 			document.getElementById('dingding').play();
 		}
 	}, timeDelaySet);
@@ -80,7 +80,7 @@ var meetingTimer = function(timeDelaySet,audioFileName){
 
 	$("#minutes1").on("click", function(e){
 		meetingTimer(40000,"ding")
-		meetingTimer(60000,"dingdingding")
+		meetingTimer(60000,"dingding")
 		var countDownNumber = 60;
 		$("#minutes1").html(countDownNumber+" Seconds remaining");
 		document.getElementById("minutes1").disabled = true; 
@@ -97,7 +97,7 @@ var meetingTimer = function(timeDelaySet,audioFileName){
 
 	$("#minutes2").on("click", function(e){
 		meetingTimer(100000,"ding")
-		meetingTimer(120000,"dingdingding")
+		meetingTimer(120000,"dingding")
 		var countDownNumber = 120;
 		$("#minutes2").html(countDownNumber+" Seconds remaining");
 		document.getElementById("minutes2").disabled = true; 
@@ -114,7 +114,7 @@ var meetingTimer = function(timeDelaySet,audioFileName){
 
 	$("#seconds90").on("click", function(e){
 		meetingTimer(70000,"ding")
-		meetingTimer(90000,"dingdingding")
+		meetingTimer(90000,"dingding")
 		var countDownNumber = 90;
 		$("#seconds90").html(countDownNumber+" Seconds remaining");
 		document.getElementById("seconds90").disabled = true; 
