--- a/index.html
+++ b/index.html
@@ -79,37 +79,41 @@ var meetingTimer = function(timeDelaySet,audioFileName){
 	// meetingTimer(20000); // cookstep namespace
 
 	$("#minutes1").on("click", function(e){
-		meetingTimer(40000,"ding")
-		meetingTimer(60000,"dingding")
 		var countDownNumber = 60;
 		$("#minutes1").html(countDownNumber+" Seconds remaining");
 		document.getElementById("minutes1").disabled = true; 
-		setInterval(function() {
+		var minutesInterval = setInterval(function() {
 			countDownNumber--
 			$("#minutes1").html(countDownNumber+" Seconds remaining");
+			if(countDownNumber == 20){
+				meetingTimer(1,"ding");
+			}
 			if(countDownNumber <= 1){
+				meetingTimer(1,"dingding");
 				$("#minutes1").html("1 Minute Timer");
 				document.getElementById("minutes1").disabled = false; 
 				countDownNumber = 60;
-				clearInterval();
+				clearInterval(minutesInterval);
 			}
 		}, 1000);
 	});
 
 	$("#minutes2").on("click", function(e){
-		meetingTimer(100000,"ding")
-		meetingTimer(120000,"dingding")
 		var countDownNumber = 120;
 		$("#minutes2").html(countDownNumber+" Seconds remaining");
 		document.getElementById("minutes2").disabled = true; 
 		setInterval(function() {
 			countDownNumber--
 			$("#minutes2").html(countDownNumber+" Seconds remaining");
+			if(countDownNumber == 20){
+				meetingTimer(1,"ding")
+			}
 			if(countDownNumber <= 1){
+				meetingTimer(1,"dingding");
 				$("#minutes1").html("2 Minute Timer");
 				document.getElementById("minutes1").disabled = false; 
 				countDownNumber = 120;
-				clearInterval();
+				this.clearInterval();
 			}
 		}, 1000);
 	});
@@ -123,11 +127,15 @@ var meetingTimer = function(timeDelaySet,audioFileName){
 		setInterval(function() {
 			countDownNumber--
 			$("#seconds90").html(countDownNumber+" Seconds remaining");
+			if(countDownNumber == 20){
+				meetingTimer(1,"ding")
+			}
 			if(countDownNumber <= 1){
+				meetingTimer(1,"dingding");
 				$("#minutes1").html("1 1/2 Minute Timer");
 				document.getElementById("seconds90").disabled = false; 
 				countDownNumber = 90;
-				clearInterval();
+				this.clearInterval();
 			}
 		}, 1000);
 	});
