--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="container editing">
         <div class="row controls">
             <div class="twelve columns">
-            	<br/>Meeting Timer with 20 seconds left ding sound.
+            	<br/>Meeting Timer with 20 seconds left ding sound. v0
             </div>
 
             <div class="twelve columns">
