--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="container editing">
         <div class="row controls">
             <div class="twelve columns">
-            	<br/>Meeting Timer with 20 seconds left ding sound. v0
+            	<br/>Meeting Timer with 20 seconds left ding sound. v0.01
             </div>
 
             <div class="twelve columns">
@@ -88,6 +88,7 @@ var meetingTimer = function(timeDelaySet,audioFileName){
 	// meetingTimer(20000); // cookstep namespace
 
 	$("#minutes1").on("click", function(e){
+		meetingTimer(1,"ding");
 		var countDownNumber = 60;
 		var pausePlay = "play";
 		$("#minutes1").html(countDownNumber+" Seconds remaining");
@@ -139,6 +140,7 @@ var meetingTimer = function(timeDelaySet,audioFileName){
 
 
 	$("#minutes2").on("click", function(e){
+		meetingTimer(1,"ding");
 		var countDownNumber = 120;
 		var pausePlay = "play";
 		$("#minutes2").html(countDownNumber+" Seconds remaining");
@@ -190,6 +192,7 @@ var meetingTimer = function(timeDelaySet,audioFileName){
 
 
 	$("#seconds90").on("click", function(e){
+		meetingTimer(1,"ding");
 		var countDownNumber = 90;
 		var pausePlay = "play";
 		$("#seconds90").html(countDownNumber+" Seconds remaining");
