fire both spunds first so they will fire last stupid android

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@ var meetingTimer = function(timeDelaySet,audioFileName){
 
 	$("#minutes1").on("click", function(e){
 		meetingTimer(1,"ding");
+		meetingTimer(1,"dingding");
 		var countDownNumber = 60;
 		var pausePlay = "play";
 		$("#minutes1").html(countDownNumber+" Seconds remaining");
@@ -141,6 +142,8 @@ var meetingTimer = function(timeDelaySet,audioFileName){
 
 	$("#minutes2").on("click", function(e){
 		meetingTimer(1,"ding");
+		meetingTimer(1,"dingding");
+		
 		var countDownNumber = 120;
 		var pausePlay = "play";
 		$("#minutes2").html(countDownNumber+" Seconds remaining");
@@ -193,6 +196,8 @@ var meetingTimer = function(timeDelaySet,audioFileName){
 
 	$("#seconds90").on("click", function(e){
 		meetingTimer(1,"ding");
+		meetingTimer(1,"dingding");
+		
 		var countDownNumber = 90;
 		var pausePlay = "play";
 		$("#seconds90").html(countDownNumber+" Seconds remaining");
