squish my stupid add 20 seconds left

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
           -o-user-select: auto !important;
           user-select: auto !important;
         }
+        .counting {
+        	background-color: #eaeaea;
+        }
         </style>
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
@@ -60,55 +63,69 @@
 
 /* End Drag and Drop Funcs */
 
-$().ready(function(){
 	document.getElementById('ding').play();
 	document.getElementById('dingding').play();
+$().ready(function(){
 	
 	function MeetingTimer ( targetName, countDownNumber, intervalName ) {
-
+		var miliseconds = 1000;
 		var passedCountDownNumber = countDownNumber;
 	    this.countDownNumber = countDownNumber;
-	    var isPlaying = "";
+	    var isPlaying = "no";
+
+	    this.currentNumber = function(){
+	    	return countDownNumber;
+	    }
 	    this.playStatus = function(){
 	    	return isPlaying;
 	    }
 	    this.stop = function(){
 	    	clearInterval(window.intervalName);
 	    	clearInterval(window.intervalNameAudio);
-	    	console.log(countDownNumber);
+	    	clearInterval(window.intervalNameAudioWarning);
 	    	isPlaying = "no";
 	    	$(targetName).html("PLAY ("+countDownNumber+" Seconds remaining)");
+	    	$(targetName).removeClass("counting");
 	    	// currentCountDownNumber = countDownNumber;
 	    }
 
+	    this.set = function(){
+	    	
+	    }
 
 	    this.play = function(){
-			$(targetName).html("PAUSE ("+countDownNumber+" Seconds remaining)");	    	
+			$(targetName).html("PAUSE ("+countDownNumber+" Seconds remaining)");	
+	    	isPlaying = "yes";
+	    	$(targetName).addClass("counting");
+
 	    	window.intervalName = setInterval(function() {
-	    		countDownNumber--;
-	    		if(countDownNumber <= 0){
+	    		console.log(countDownNumber+"<before");
+	    		if(countDownNumber > 0){
+	    			countDownNumber--;
+	    		}
+	    		console.log(countDownNumber+"<after");
+	    		if(countDownNumber < 1){
+	    			countDownNumber = passedCountDownNumber; // countDownNumber = countDownNum;
+	    			console.log(countDownNumber+"<tested to be more or equal to zero");
 	    			clearInterval(window.intervalName);
 	    			isPlaying = "no";	
-	    			console.log("it's over");
 	    			return
 	    		}
-	    		console.log("once every second"); 
-	    		isPlaying = "yes";
 	    		$(targetName).html("PAUSE ("+countDownNumber+" Seconds remaining)");
 
-
-	    		// } else {
-	    		// 	$(targetName).html("PAUSE ("+countDownNumber+" Seconds remaining)");
-	    		// }
-	    		// console.log(countDownNumber);
-    		}, 50);
+    		}, miliseconds);
 
 	    	window.intervalNameAudio = setTimeout(function() { 
 	    		document.getElementById('ding').play();
-	    		countDownNumber = passedCountDownNumber; // countDownNumber = countDownNum;
 	    		$(targetName).html($(targetName).attr("data-title"));
 	    		$(".timers").removeAttr('disabled');
-    		}, (countDownNumber*50));
+	    		$(targetName).removeClass("counting");
+			}, (countDownNumber*miliseconds));
+
+	    	var numcm = countDownNumber*miliseconds-20*miliseconds
+	    	window.intervalNameAudioWarning = setTimeout(function() { 
+	    		document.getElementById('dingding').play();
+			}, numcm);
 	    		
 	    }
 
@@ -119,7 +136,9 @@ $().ready(function(){
 	    	$(targetName).html(targetTitle);
 			clearInterval(window.intervalName);
 	    	clearTimeout(window.intervalNameAudio);
+	    	clearTimeout(window.intervalNameAudioWarning);
 	    	isPlaying = "no";
+	    	$(targetName).removeClass("counting");
 	    }
 
 	}
@@ -129,86 +148,50 @@ $().ready(function(){
 	var mtimer120 = new MeetingTimer("#minutes2",120,"minutes3Timer");
 
 	$("#minutes1").on("click",function(){
-		if(mtimer60.playStatus() === ""){
-			console.log(mtimer60.playStatus()+"mtimer60.isPlaying ''")
+		let methods = Object.getOwnPropertyNames(mtimer60);
+		console.log(methods+mtimer60.currentNumber());
+		if(mtimer60.playStatus() === "no") {
 			$(".timers").attr('disabled',true);
 			$("#minutes1").removeAttr('disabled');
-			mtimer60.play();
-		} else if(mtimer60.playStatus() === "no") {
-			$(".timers").attr('disabled',true);
-			$("#minutes1").removeAttr('disabled');
-			console.log(mtimer60.playStatus()+"mtimer60.isPlaying 'no'")
 			mtimer60.play();
 		} else {
-			console.log(mtimer60.playStatus()+"mtimer60.isPlaying 'else'")
-			mtimer60.stop();
 			$(".timers").removeAttr('disabled');
+			mtimer60.stop();
 		}
 	});
 	
 	$("#seconds90").on("click",function(){
-		if(mtimer90.playStatus() === ""){
+		let methods = Object.getOwnPropertyNames(mtimer60);
+		console.log(methods+mtimer90.currentNumber());
+		if(mtimer90.playStatus() === "no") {
 			$(".timers").attr('disabled',true);
 			$("#seconds90").removeAttr('disabled');
-			console.log(mtimer90.playStatus()+"mtimer90.isPlaying ''")
-			mtimer90.play();
-		} else if(mtimer90.playStatus() === "no") {
-			$(".timers").attr('disabled',true);
-			$("#seconds90").removeAttr('disabled');
-			console.log(mtimer90.playStatus()+"mtimer90.isPlaying 'no'")
 			mtimer90.play();
 		} else {
-			console.log(mtimer90.playStatus()+"mtimer90.isPlaying 'else'")
-			mtimer90.stop();
 			$(".timers").removeAttr('disabled');
+			mtimer90.stop();
 		}
 	});
 
 	$("#minutes2").on("click",function(){
-		if(mtimer120.playStatus() === ""){
-			console.log(mtimer120.playStatus()+"mtimer120.isPlaying ''")
+		let methods = Object.getOwnPropertyNames(mtimer60);
+		console.log(methods+mtimer120.currentNumber());
+		if(mtimer120.playStatus() === "no") {
 			$(".timers").attr('disabled',true);
 			$("#minutes2").removeAttr('disabled');
-			mtimer120.play();
-		} else if(mtimer120.playStatus() === "no") {
-			$(".timers").attr('disabled',true);
-			$("#minutes2").removeAttr('disabled');
-			console.log(mtimer120.playStatus()+"mtimer120.isPlaying 'no'")
 			mtimer120.play();
 		} else {
-			console.log(mtimer120.playStatus()+"mtimer120.isPlaying 'else'")
-			mtimer120.stop();
 			$(".timers").removeAttr('disabled');
+			mtimer120.stop();
 		}
 	});
 
-	// $("#playpause").on("click",function(){
-	// 	$(".timers").removeAttr('disabled');
-	// 	mtimer60.stop();
-	// 	mtimer90.stop();
-	// 	mtimer120.stop();
-	// });
 	$("#reset").on("click",function(){
 		$(".timers").removeAttr('disabled');
 		mtimer60.reset();
 		mtimer90.reset();
 		mtimer120.reset();
-		// mtimer60.stop();
-		// mtimer90.stop();
-		// mtimer120.stop();
 	});
-
-
-	// $("#minutes1").on("click",function(){
-	// 	console.log("yo?")
-	// 	mtimer.play();
-	// 	$(".timers").attr("disabled","true")
-	// });
-	// $("#seconds90").on("click",function(){
-	// 	console.log(mtimer.countDownNumber()+"mtimer.countDownNumber()")
-	// 	mtimer.play();
-	// 	$(".timers").attr("disabled","true")
-	// });
 
 
 }); // jquery on ready
