--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <div class="row controls">
             <div class="twelve columns">
             	<br/>Meeting Timer with 20 seconds left warning v0.01
+            	<br/>Meeting Timer with 20 seconds left warning v1
             </div>
 
             <div class="twelve columns">
