--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     <div class="container editing">
         <div class="row controls">
             <div class="twelve columns">
-            	<br/>Meeting Timer with 20 seconds left warning v1
+            	<h2>Meeting Timer with 20 seconds left warning v1</h2>
+            	<p>This timer becomes slow and will not sound it's alarm if your device goes to sleep.</p>
             </div>
 
             <div class="twelve columns">
